# MTG_MCP

./: .gitignore  README.md  USAGE.md  pyproject.toml  test_mcp_connection.py
.kiro/settings/: mcp.json
.kiro/specs/mtg-mcp-server/: design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
examples/: README.md  mcp-config-alternatives.json  mcp-config.json  test_entry_point.py  test_integration.py  test_mcp_server.py  validate_server.py
mtg_mcp_server/: __init__.py  main.py
mtg_mcp_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
mtg_mcp_server/api/: __init__.py  client.py
mtg_mcp_server/models/: __init__.py  card.py  exceptions.py  responses.py  set.py
mtg_mcp_server/tools/: __init__.py  handlers.py
mtg_mcp_server/utils/: __init__.py  data_converters.py  param_processors.py  validators.py
tests/: test_api_client.py  test_data_converters.py  test_filter_cards_handler.py  test_get_card_details_handler.py  test_param_processors.py  test_search_cards_handler.py  test_tool_registration.py  test_validators.py
